--- a/xaml_datas/MainWindow.xaml
+++ b/xaml_datas/MainWindow.xaml
@@ -91,7 +91,20 @@
 
                         <TextBlock Style="{x:Null}" x:Name="modeName" Grid.Row="0" Grid.Column ="2" FontSize="16"  Background="White" Foreground="DarkBlue"  ToolTip="Nom du mode" VerticalAlignment="Center" Text="Mode :" HorizontalAlignment="Right"></TextBlock>
 
-                        <ComboBox Name="UserMode" Width="242"  Grid.Column ="3"  Grid.Row="0" HorizontalContentAlignment="Center" HorizontalAlignment="Right" SelectionChanged="UserMode_SelectionChanged" FontFamily="Arial" FontWeight="Bold" FontSize="14" BorderBrush="#FF232020" Foreground="#FF0000cc" Background="#ffffffff" />
+                        <ComboBox Name="UserMode"
+                                  Width="242" 
+                                  Grid.Column ="3"
+                                  Grid.Row="0"
+                                  HorizontalContentAlignment="Center"
+                                  HorizontalAlignment="Right"
+                                  SelectionChanged="UserMode_SelectionChanged"
+                                  FontFamily="Arial"
+                                  FontWeight="Bold"
+                                  FontSize="14"
+                                  BorderBrush="#FF232020"
+                                  Foreground="#FF0000cc"
+                                  Background="#ffffffff"
+                                  ToolTip="Médical : après contourage &#x0a; Dosimétriste : Avant validation médicale &#x0a; Physicien : Après finalisation"/>
 
                     </Grid>
                 </DockPanel>
