--- a/xaml_datas/MainWindow.xaml
+++ b/xaml_datas/MainWindow.xaml
@@ -136,9 +136,9 @@
                 <StackPanel Style="{x:Null}" Height="60">
                     <!-- ADD A SPACING -->
                 </StackPanel>
-                <StackPanel Style="{x:Null}" Height="60" Width="800">
-                    <Button Style="{x:Null}"  x:Name="exportPDF_button" Content="PDF" Visibility="Hidden" FontSize="16" FontFamily="Bauhaus" Click="exportPDF_button_Click" Width="100" Height="32" Background="LightGray" VerticalAlignment="Top" HorizontalAlignment="Right" ToolTip="Export des résultats en pdf" />
-                    <Button Style="{x:Null}"  x:Name="createCheckListWord_button" Content="Check-List" Visibility="Hidden" FontSize="16" FontFamily="Bauhaus" Click="createCheckListWord_button_Click" Width="100" Height="32" Background="LightGray" VerticalAlignment="Top" HorizontalAlignment="Right" ToolTip="Création d'une Checlist PDF prérempli" />
+                <StackPanel Style="{x:Null}" Height="70" Width="805">
+                    <Button Style="{x:Null}"  x:Name="exportPDF_button" Content="PDF" Visibility="Hidden" FontSize="16" FontFamily="Bauhaus" Margin="0,2,0,0"  Click="exportPDF_button_Click" Width="100" Height="30" Background="LightGray" VerticalAlignment="Top" HorizontalAlignment="Right" ToolTip="Export des résultats en pdf.  Ce fichier est généré par défaut. Cliquer seulemnt pour le regénérer" />
+                    <Button Style="{x:Null}"  x:Name="createCheckListWord_button" Content="Check-List" Visibility="Hidden" FontSize="16" FontFamily="Bauhaus" Margin="0,4,0,0" Click="createCheckListWord_button_Click" Width="100" Height="30" Background="LightGray" VerticalAlignment="Top" HorizontalAlignment="Right" ToolTip="Création d'une Checlist Word." />
                 </StackPanel>
                 <!--<StackPanel Height="30" Width="800" VerticalAlignment="Bottom">
                     <Button Content="?" FontSize="10" FontFamily="Bauhaus" Click="Button_Click_help" Width="15" Height="20" Background="Coral" VerticalAlignment="Bottom" HorizontalAlignment="Right" />
