--- a/xaml_datas/selectPTWWindow.xaml
+++ b/xaml_datas/selectPTWWindow.xaml
@@ -6,17 +6,17 @@
         xmlns:local="clr-namespace:PlanCheck.xaml_datas"
         mc:Ignorable="d"
         Title="selectPTVWindow" Height="450" Width="800">
-    <Grid>
-        <TextBlock Background="Blue" HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" Height="37" Width="734" FontWeight="Bold"><Run Language="fr-fr" Text="Sélectionner les structures qui correspondent aux volumes de la prescription" Foreground="White"/></TextBlock>
+    <Grid  Style="{x:Null}">
+        <TextBlock  Style="{x:Null}" Background="Blue" HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" Height="37" Width="734" FontWeight="Bold"><Run Language="fr-fr" Text="Sélectionner les structures qui correspondent aux volumes de la prescription" Foreground="White"/></TextBlock>
 
-        <ListBox x:Name="targetList" HorizontalAlignment="Left" VerticalAlignment="Top" Width="260" Height="219" Margin="266,131,0,0" />
-        <StackPanel Name="stackPanel" Visibility="Visible" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="396,131,0,0" >
+        <ListBox  Style="{x:Null}" x:Name="targetList" HorizontalAlignment="Left" VerticalAlignment="Top" Width="260" Height="219" Margin="266,131,0,0" />
+        <StackPanel  Style="{x:Null}" Name="stackPanel" Visibility="Visible" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="396,131,0,0" >
             <!-- Les ComboBox seront ajoutées dynamiquement ici -->
         </StackPanel>
 
-        <Button x:Name="close" Content="Valider" HorizontalAlignment="Left" Margin="650,352,0,0" VerticalAlignment="Top" Click="close_Click" Height="48" Width="69" FontSize="16"/>
-        <TextBlock Background="Gainsboro" HorizontalAlignment="Left"  TextAlignment="Center" Margin="266,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="12" Height="36" Width="107" FontWeight="Bold"><Run Language="fr-fr" Text="Volumes de la prescription"/></TextBlock>
-        <TextBlock Background="Gainsboro" HorizontalAlignment="Left" TextAlignment="Center" Margin="400,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="12" Height="36" Width="126" FontWeight="Bold"><Run Language="fr-fr" Text="Structures du Plan"/></TextBlock>
+        <Button  Style="{x:Null}" x:Name="close" Content="Valider" HorizontalAlignment="Left" Margin="650,352,0,0" VerticalAlignment="Top" Click="close_Click" Height="48" Width="69" FontSize="16"/>
+        <TextBlock  Style="{x:Null}" Background="Gainsboro" HorizontalAlignment="Left"  TextAlignment="Center" Margin="266,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="12" Height="36" Width="107" FontWeight="Bold"><Run Language="fr-fr" Text="Volumes de la prescription"/></TextBlock>
+        <TextBlock  Style="{x:Null}" Background="Gainsboro" HorizontalAlignment="Left" TextAlignment="Center" Margin="400,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="12" Height="36" Width="126" FontWeight="Bold"><Run Language="fr-fr" Text="Structures du Plan"/></TextBlock>
        
     </Grid>
 
