--- a/xaml_datas/MainWindow.xaml
+++ b/xaml_datas/MainWindow.xaml
@@ -88,7 +88,9 @@
                         <TextBlock Style="{x:Null}" x:Name="cpName" Grid.Row="0" Grid.Column ="0" FontSize="16"  Background="White"  Foreground="DarkBlue"  ToolTip="Nom du check protocol" VerticalAlignment="Center" Text="Check-Protocol :" HorizontalAlignment="Right"></TextBlock>                            
                         <ComboBox Name="cbCheckProtocol" Width="240"  Grid.Column ="1"  Grid.Row="0" HorizontalContentAlignment="Center" HorizontalAlignment="Right" SelectionChanged="CheckProtocol_SelectionChanged" FontFamily="Arial" FontWeight="Bold" FontSize="14" BorderBrush="#FF232020" Foreground="#FF0000cc" Background="#ffffffff" />
                          </-->
-                        <Button Style="{x:Null}" Grid.Row="0" Grid.Column ="3" x:Name="prefButton" Content="Préférences Utilisateur" Width="235" Height="28" Click="preferences_button_Click" ToolTip="Choisir un autre check-protocol"  />
+
+
+                        <Button Style="{x:Null}" Grid.Row="0" Grid.Column ="3" x:Name="prefButton" Content="Préférences Utilisateur" Width="235" Height="28" Click="preferences_button_Click" ToolTip="Personaliser plancheck"  />
 
                     </Grid>
                 </DockPanel>
@@ -113,8 +115,21 @@
 
                             <TextBlock Style="{x:Null}" x:Name="defaultProtocol" Grid.Row="0" Grid.Column ="0" FontSize="16"  Background="White"  Foreground="DarkBlue" FontWeight="Bold" ToolTip="Check-protocol proposé" VerticalAlignment="Center" Text="{Binding theProtocol}" HorizontalAlignment="Center"></TextBlock>
 
-                            <Button Style="{x:Null}" Grid.Row="0" Grid.Column ="1" x:Name="Verif_button" Content="Modifier..." Width="110" Height="32" Click="Choose_file_button_Click" ToolTip="Choisir un autre check-protocol" RenderTransformOrigin="-0.734,0.136" />
+                            <!--Button Style="{x:Null}" Grid.Row="0" Grid.Column ="1" x:Name="Verif_button" Content="Modifier..." Width="110" Height="32" Click="Choose_file_button_Click" ToolTip="Choisir un autre check-protocol" RenderTransformOrigin="-0.734,0.136" /-->
+                            <ComboBox Style="{x:Null}"  x:Name="comboCP" Width="500" SelectionChanged="comboCP_SelectionChanged"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" ToolTip="Choisir un autre check-protocol">
 
+
+
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding}"
+                                        FontFamily="Arial"
+                                        FontSize="16"
+                                        FontWeight="Bold"                              
+                                        Foreground="Blue"/>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
                             <Button Style="{x:Null}" Grid.Row="0" Grid.Column ="2" x:Name="OK_button" Content="Check!" Width="100" Height="32" Click="OK_button_click" ToolTip="Lancer la vérification" RenderTransformOrigin="-0.734,0.136" />
 
                             <Button Style="{x:Null}" Grid.Row="0" Grid.Column ="3" x:Name="HELP_button" Content="?" FontSize="10" FontFamily="Bauhaus" Click="Button_Click_help" Width="15" Height="32" Background="Coral" VerticalAlignment="Top" HorizontalAlignment="Right" ToolTip="Aide online si Chrome installé (sinon pdf)" />
